src/objects/Invoice_History__c.object
<CustomObject>
    <fields>
        <fullName>Drawloop_Next__c</fullName>
        <formula>if( 
  isblank(Sales_Credit_Note__c ),
  if (Sales_Invoice__r.Auto_Send_Invoice_By__c=&apos;Email&apos;, 
      &quot;SFInvoice_History__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L7OpMAK;SFSales_Invoice__c:&quot; &amp; Sales_Invoice__c &amp;&quot;;Deploy:a3SD0000000LHYOMA4;SFContact:003D000001ZWRXYIA5&quot;,
      &quot;SFInvoice_History__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L7OqMAK;SFSales_Invoice__c:&quot; &amp; Sales_Invoice__c &amp;&quot;;Deploy:a3SD0000000LHYPMA4;SFContact:003D000001ZWRXYIA5&quot;), 
  &quot;CREDIT NOTES NOT SET FOR DDP&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drawloop_Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Status__c</fullName>
        <defaultValue>&apos;Waiting&apos;</defaultValue>
        <label>Drawloop Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_to__c</fullName>
        <description>Associated document will be emailed to this address</description>
        <inlineHelpText>Associated document will be emailed to this address</inlineHelpText>
        <label>Email to</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emailed_on__c</fullName>
        <label>Emailed on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evaluate_delivery_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate delivery Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failure_Message__c</fullName>
        <label>Failure Message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Account__c</fullName>
        <formula>Sales_Invoice__r.c2g__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Credit_Amount__c</fullName>
        <label>Invoice/Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>Opportunity Stage at Invoice / Credit Note creation</description>
        <label>Opportunity Stage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoice History</relationshipLabel>
        <relationshipName>InvoiceHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Printed_on__c</fullName>
        <label>Printed on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Credit_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Credit Notes</description>
        <label>Sales Credit Note</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Invoice History</relationshipLabel>
        <relationshipName>Invoice_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Invoice History</relationshipLabel>
        <relationshipName>InvoiceHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <formula>IF(isblank( Emailed_on__c ), if (isblank( Printed_on__c ), &apos;Not Emailed/Printed&apos; , &apos;Printed&apos; ), &apos;Emailed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credited &amp; Cash Un-Matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>if this is a Invoice or a Credit</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Invoice History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sent__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Sales_Invoice__c</columns>
        <columns>Sales_Credit_Note__c</columns>
        <columns>Email_to__c</columns>
        <columns>Emailed_on__c</columns>
        <columns>Printed_on__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Invoice_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Email_to__c</columns>
        <columns>Sent__c</columns>
        <columns>Emailed_on__c</columns>
        <columns>Printed_on__c</columns>
        <columns>Sales_Invoice__c</columns>
        <columns>Invoice_Credit_Amount__c</columns>
        <columns>Sales_Credit_Note__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <nameField>
        <displayFormat>IH-{0000}</displayFormat>
        <label>Invoice History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>